--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="styles.css"/>
+    <link rel="stylesheet" href="styles/styles.css"/>
     <title>YouTube Page</title>
 </head>
 <body>
